# DesktopJodel

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  client.cpp  client.h  colorWidget.cpp  colorWidget.h  emoji.cpp  emoji.h  emoji.qrc  imageFetcher.cpp  imageFetcher.h  imageWidget.cpp  imageWidget.h  location.cpp  location.h  locationDialog.cpp  locationDialog.h  locationDialog.ui  locationWidget.cpp  locationWidget.h  locationWidget.ui  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  newAccountDialog.cpp  newAccountDialog.h  newAccountDialog.ui  post.cpp  post.h  postDetailsPage.cpp  postDetailsPage.h  postDetailsWidget.ui  postListPage.cpp  postListPage.h  postListPage.ui  postWidget.cpp  postWidget.h  postWidget.ui  settingsDialog.cpp  settingsDialog.h  (+6 more)
